# SOEM

./: .gitignore  CMakeLists.txt
cmake/Toolchains/: arm-generic.cmake
test/linux/esakt/: CMakeLists.txt  esakt.c
